# SipTalk

./: .gitattributes  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pjsip_import.cmake  sip_native_jni.cpp
android/app/src/main/kotlin/com/siptalk/phone/: AudioRouteManager.kt  FcmCallReceiver.kt  IncomingCallService.kt  SipPlatformBridge.kt
android/app/src/main/kotlin/com/siptalk/siptalk/: MainActivity.kt  SipNative.kt
docs/: architecture.md  implementation-plan.md  mobile-incoming-call.md  native-dependencies.md  pjsip-core-design.md  platform-channel.md  push-gateway-protocol.md
ios/Runner/: AudioSessionManager.swift  CallKitManager.swift  Info.plist  PushKitManager.swift  SipPlatformBridge.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/sip/: call_timeline.dart  call_timeline_store.dart  incoming_call_push.dart  sip_account.dart  sip_call.dart  sip_controller.dart  sip_event.dart  sip_method_channel_controller.dart  sip_profile_store.dart  sip_state_machine.dart
native/sip_core/: CMakeLists.txt  README.md  SipCommandQueue.cpp  SipCommandQueue.hpp  SipCore.cpp  SipCore.hpp
scripts/: build_android_debug_arm64.ps1  build_pjsip_android.ps1  build_pjsip_android_wsl.sh  fetch_pjsip.ps1  install_linux_ndk_wsl.ps1  install_linux_ndk_wsl.sh
test/: call_timeline_test.dart  incoming_call_push_test.dart  sip_profile_store_test.dart  sip_state_machine_test.dart  widget_test.dart
tool/: verify_core.dart
